--- a/_config.yml
+++ b/_config.yml
@@ -7,22 +7,22 @@ highlighter: rouge
 markdown: kramdown
 disqus: dbyll
 google_analytics: dbyll
-title: Hui Yie - CS3216 & beyond
+title: Aaron Ong
 
 defaults:
   -
     scope:
       path: "" # empty string for all files
     values:
-      title: Hui Yie, CS3216, and beyond
+      title: Timeline
 
-description: A blog for CS3216 and beyond :)
+description: THE description
 author:
-  name: Chng Hui Yie
-  email: chng.huiyie@u.nus.edu
-  github: huiyie
-  linkedin: hui-yie-chng-9a469b109
-  bio: CS3216 & beyond
+  name: Aaron Ong
+  email: aaronongcs@gmail.com
+  github: Aaronong
+  linkedin: aaronongcs
+  bio: A Developer's Journey
 
 rss_path: feed.xml
 categories_path: categories.html
