--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: huiyie-cs3216
+disqus: dbyll
 google_analytics: dbyll
 title: Hui Yie - CS3216 & beyond
 
