--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ paginate_path: "page:num"
 exclude: ["README.md"] # files to exclude
 highlighter: rouge
 markdown: kramdown
-disqus: dbyll
+disqus: huiyie-cs3216
 google_analytics: dbyll
 title: Hui Yie - CS3216 and beyond
 
