--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
   email: chng.huiyie@u.nus.edu
   github: huiyie
   linkedin: hui-yie-chng-9a469b109
-  bio: I don’t think technology can solve any and all problem. But technology can enable people to solve almost any problem :)
+  bio: I don’t think technology can solve any and all problems. But technology can enable people to solve almost any problem :)
 
 rss_path: feed.xml
 categories_path: categories.html
